--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "prod" : "PORT=80 node ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
