--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.3.3",
+    "unsplash-js": "^4.8.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
