--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,9 @@
     "@angular/material": "^7.1.0",
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
+    "@angular/pwa": "^0.12.1",
     "@angular/router": "~7.0.0",
+    "@angular/service-worker": "~7.0.0",
     "@ngrx/effects": "^6.1.2",
     "@ngrx/store": "^6.1.2",
     "@ngrx/store-devtools": "^6.1.2",
